# fastapi_from_scratch

./: .gitignore  LICENSE  README.md  pyproject.toml
fastapi_from_scratch/: app.py  database.py  schemas.py  security.py
fastapi_from_scratch/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: 2e379fba9be3_create_users_table.py  50ed81e745d4_create_initial_users_table.py
src/: app.py  models.py  schemas.py  settings.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py  test_users.py
